# automatic_car

./: .gitignore  README.md  pyproject.toml  report.html  report.ipynb
automatic_car/: __main__.py  automatic.py  draw_convenet.py  frame_dataset.py  interactive.py  interactive_run.py  model.py  models.py  play.py  utils.py
models/: model1.pth  model1_80.pth  model2.pth  model2_80.pth
