[tool.poetry]
name = "automatic-car"
version = "0.1.0"
description = "This is my solution for the second homework assignment in the Machine Learning course at MsC of Artificial Intelligence and Robotics of La Sapienza University of Rome. The goal is to develop two CNN models that enable accurate gameplay for the car."
authors = ["José Manuel <josedlv936@gmail.com>"]
readme = "README.md"
packages = [{include = "automatic_car"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}
matplotlib = "^3.8.2"
torch = "^2.1.1"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
automatic_car_cli = 'automatic_car.__main__:main'